fix: 관계에 따라 메모리상에서 정리되도록 수정